objects/ssot__RecruitmentPostingContentSection__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Recruitment Posting Content Section Id</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Posting Content Section Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Name</masterLabel>
            <refAttrDeveloperName>Name</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentContentSectionId__c</fullName>
        <label>Recruitment Content Section</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Content Section</masterLabel>
            <refAttrDeveloperName>RecruitmentContentSectionId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostingId__c</fullName>
        <label>Recruitment Posting</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Posting</masterLabel>
            <refAttrDeveloperName>RecruitmentPostingId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366702632_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecruitmentPostingContentSection_Rec_rel</label>
        <referenceTo>ssot__RecruitmentPosting__dlm</referenceTo>
        <relationshipLabel>RecruitmentPostingContentSection_Rec_rel</relationshipLabel>
        <relationshipName>rel_1727366702632_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366708703_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecruitmentPostingContentSection_Rec_rel</label>
        <referenceTo>ssot__RecruitmentContentSection__dlm</referenceTo>
        <relationshipLabel>RecruitmentPostingContentSection_Rec_rel</relationshipLabel>
        <relationshipName>rel_1727366708703_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Recruitment Posting Content Section</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Recruitment Requisition</referenceEntityGroup>
        <referenceEntityName>RecruitmentPostingContentSection</referenceEntityName>
        <referenceEntitySubjectArea>Recruitment Requisition</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>